# Poker-Therapist

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE_DIAGRAM.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION_SETUP.md  AUTHENTICATION_VERIFICATION.md  AUTH_QUICKSTART.md  AUTH_REFERENCE.md  AUTH_TESTING_GUIDE.md  CHATBOT_QUICKSTART.md  CI_CD_AUTHENTICATION.md  CREDENTIAL_CONFIGURATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_TESTING.md  DEPLOYMENT_VERIFICATION.md  ENHANCED_VOICE_GUIDE.md  FIREWALL_VERIFICATION.md  GCP_SETUP.md  GOOGLE_CLOUD_SETUP.md  IMPLEMENTATION_AUTH_COMPLETE.md  IMPLEMENTATION_AUTH_CONFIG.md  IMPLEMENTATION_AUTH_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ENHANCED_VOICE.md  IMPLEMENTATION_GCP_AUTH.md  IMPLEMENTATION_HAND_TRACKING.md  IMPLEMENTATION_MULTI_PROVIDER.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_AUTH.md  IMPLEMENTATION_VERCEL_GATEWAY_FIX.md  INSTITUTIONAL_AUTH_SETUP.md  MULTI_PROVIDER_QUICKSTART.md  NAMING_CONVENTIONS.md  NEXT_STEPS.md  OAUTH_DEPLOYMENT.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_QUICKSTART.md  OAUTH_SETUP.md  OAUTH_TESTING.md  (+70 more)
.github/: CODEQL_VARIABLES.md  copilot-instructions.md
.streamlit/: config.toml  secrets.toml.example
Poker-Coach/: therapy-rex.agent.md
Poker-Coach-Grind/: .vercelignore  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PRODUCTION.md  README.md  VERCEL_DEPLOYMENT.md  __init__.py  quickstart.sh  requirements.txt  vercel.json
api/: coaches.py  grind.py  index.py  requirements.txt
backend/: .env.example  README.md  __init__.py  main.py  (+1 more)
docs/: API.md  (+13 more)
(+256 files in other folders)
